--- a/bower.json
+++ b/bower.json
@@ -55,7 +55,7 @@
     "angular-xeditable": "~0.5.0",
     "ng-js-tree": "~0.0.7",
     "angular-ui-select": "^0.19.6",
-    "lodash": "^4.17.4"
+    "restangular": "^1.6.1"
   },
   "resolutions": {
     "angular": "~1.5.9",
