--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "gulp-flatten": "~0.3.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-inject": "~4.1.0",
-    "gulp-load-plugins": "~1.4.0",
-    "gulp-minify-css": "~1.2.1",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "~1.0.4",
-    "gulp-ng-annotate": "~2.0.0",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-prompt": "^0.2.0",
     "gulp-protractor": "~3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "~0.5.4",
-    "gulp-rev": "~7.1.2",
+    "gulp-rev": "^8.0.0",
     "gulp-rev-replace": "~0.4.2",
     "gulp-sass": "~2.3.2",
     "gulp-shell": "^0.5.2",
@@ -35,9 +35,9 @@
     "gulp-useref": "~1.3.0",
     "gulp-util": "~3.0.6",
     "gulp-zip": "^3.0.2",
-    "http-proxy-middleware": "~0.17.2",
+    "http-proxy-middleware": "^0.17.4",
     "lodash": "~4.17.2",
-    "main-bower-files": "~2.13.1",
+    "main-bower-files": "^2.13.1",
     "uglify-save-license": "~0.4.1",
     "wiredep": "~4.0.0",
     "wrench": "~1.5.8"
